Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -2,11 +2,10 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content:space-between;
+    /* justify-content:space-around; */
     align-items: center;
 }
 .footer{
-    /* margin-top: 170px; */
     padding: 7px 0;
     background-color: rgb(241, 241, 241);;
 }
